[project]
name = "stellanow-sdk-python"
version = "0.1.0"
description = "Welcome to the StellaNow Python SDK. This SDK is designed to provide an easy-to-use interface for developers integrating their Python applications with the StellaNow Platform. The SDK communicates with the StellaNow Platform using the MQTT protocol over secure WebSockets."
authors = [
    {name = "mkrzanStella",email = "maciej.krzanowski@stella.systems"}
]
license = {text = "Stella Technologies (UK) Limited"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-keycloak (>=4.7.0,<5.0.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
    "types-pyyaml (>=6.0.12.11,<7.0.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "loguru (>=0.7.2,<0.8.0)",
    "beautifulsoup4 (>=4.12.2,<5.0.0)",
    "httpx (>=0.25.0,<0.26.0)",
    "python-schema-registry-client (>=2.4.3,<3.0.0)",
    "orjson (>=3.10.0,<4.0.0)",
    "typing-extensions (>=4.10.0,<5.0.0)",
    "stellanow-api-internals (>=0.0.3,<0.0.4)",
    "paho-mqtt (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
isort = "^5.13.2"
vulture = "^2.14"
black = "22.12.0"
ipython = "^8.32.0"
mypy = "^1.15.0"
autopep8 = "^2.3.2"
pytest = "^8.3.4"
pylint = "^3.3.4"
ruff = "^0.9.6"

